fixed faq page not showing on smaller devices

--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: rgba(white, 0.9);
+  background-color: rgba(black, 0.9);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,7 +13,7 @@
 
   transition: all 0.2s;
   &__content {
-    background-color: rgba(0, 0, 0, 0.6);
+    //background-color: rgba(0, 0, 0, 0.6);
     color:white;
     //background-image: url(../assets/images/globalbg2.jpg);
     background-blend-mode: overlay;
